# tauri-plugin-extended-fs-scope

./: Cargo.toml
examples/vanilla/public/: index.html
examples/vanilla/src-tauri/: Cargo.toml  tauri.conf.json
examples/vanilla/src-tauri/src/: main.rs
src/: error.rs  lib.rs  pattern_resolver.rs  patterns.rs  variable_registry.rs
