[package]
name = "app"
version = "0.1.0"
description = "tauri-plugin-extended-fs-scope example"
authors = ["maemon4095"]
repository = ""
edition = "2021"
rust-version = "1.60"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.2", features = [] }
tauri-plugin-extended-fs-scope = { path = "../../../" }

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]
